# Parallel_Laplace_Solver

./: .gitignore  .gitlab-ci.yml  README.md  flow_type.hpp  flow_type_cuda.hpp  flow_type_mpi.hpp  main.cpp  main.cu  matrix_type.hpp  meson.build  mpi_grid.hpp  plot_runtime.py  runtime_test.sh
.github/workflows/: ci.yml
example/: main.cpp  main.cu  meson.build  plot_vectorfield.py
include/: flow_type.hpp  flow_type_cuda.hpp  flow_type_mpi.hpp
include/base/: matrix_type.hpp  mpi_grid.hpp
test/: meson.build  test_cuda.cu  test_mpi.cpp  test_omp.cpp
tests/: meson.build  test_cuda.cu  test_mpi.cpp  test_omp.cpp
